--- a/mproj.tex
+++ b/mproj.tex
@@ -130,7 +130,7 @@ skeletons);并能在多个并行架构上运行。
 通过分支与限界技术或采用启发式方法，组合搜索能够有效地减少搜索空间，并更快地找到解决方案。
 \end{comment}
 
-\subsection{并行组合搜索(Parallel Combinatorial Search)}
+\subsection{并行组合搜索(Parallel Combinatorial Search)与YewPar}
 随着现代计算机硬件的发展,特别是多核处理器和分布式系统的普及,
 利用并行性来加速组合搜索已经成为研究的热点.
 并行组合搜索的目标是将搜索空间分解成多个部分,以便可以在多个处理单元上同时执行,从而加速解决方案的发现。
@@ -140,6 +140,27 @@ YewPar是一个专为组合搜索设计的并行框架.
 YewPar的主要特点是其灵活性和可扩展性,使其能够应对各种复杂的搜索场景.
 其中,workstealing是YewPar中用于任务调度的核心策略,
 它允许处理器在本地任务队列为空时从其他处理器窃取任务,确保所有处理器都能保持忙碌,从而提高整体性能。
+
+\subsubsection{Performance Anomalies}
+\label{sec:performance_anomalies}
+搜索算法依赖于排序启发式方法尽早找到有用的节点,
+例如决策问题中的目标节点，
+或者分支限界优化问题中的一个强约束节点。为了利用这些启发式方法,
+搜索按从左到右的顺序进行（在树的所有深度上）.
+因此，访问节点的顺序搜索具有关于搜索树的完整信息，例如
+来自它左侧的所有节点的当前最佳解，并且搜索是确定性的。
+并行搜索在没有完整的左侧信息的情况下推测性地搜索子树，
+并可能从从右到左的信息流中受益。但是，这种推测意味着
+并行搜索可能比相同的顺序搜索执行更多的工作。
+因此，并行搜索因性能异常而臭名昭著\cite{10.1007/3-540-60321-2_29}.
+有害的异常是当w个工作线程上的运行时间超过w-1个工作线程时发生的。
+在这里，额外的工作可能超过额外计算资源的好处，
+或者额外的计算资源可能会破坏搜索启发式方法。
+加速异常是超线性的加速，通常是由于从右到左的知识流动，
+通过允许比顺序搜索中更多的修剪来减少总体工作量。
+异常的存在使得推理搜索应用的并行性能变得困难。
+Yew-Par旨在避免有害的异常,同时允许加速异常;
+\cite{ARCHIBALD201892}报告了一个专门的搜索框架，该框架仔细控制异常以提供可复制的性能保证。
 
 \section{workstealing}
 Workstealing 是并行编程中的一个核心概念。
@@ -183,6 +204,8 @@ YewPar需要一种更加智能的workstealing策略。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Design and implementation}
+
+\section{总体设计}
 
 本文为了Performance-Driven Workstealing Policy设计了一套新的框架,
 框架包含Scheduler Channel(主要负责监测与统计与传输节点所有workers的负载状态),
@@ -495,6 +518,64 @@ Performance Policy的本质是获取任务的一个策略,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Evaluation}
+
+\section{Search Applications}
+
+我们对YewPar原有的两种搜索类型的代表性搜索应用和代表性样本上评估改进workstealing策略后的性能,
+如下所示.
+
+\begin{itemize}
+    \item Enumeration:
+          非平衡树搜索(UTS)根据给定的分支因子、深度和随机种子动态地构建合成的不规则树工作负载\cite{olivier2006uts}.
+          数字半群(NS)计算具有特定属数的数字半群有多少\cite{fromentin2016exploring}.
+          数字半群S是一个包含0且在加法下封闭的自然数的余集;
+          S的属数是其补数的大小.
+    \item Optimisation:
+          最大团(MaxClique)找到给定图中的最大团,
+          即最大的两两相邻顶点的集合。
+          0/1背包问题确定将每个具有利润和重量的物品放入容器中的最佳组合,
+          使得在给定的重量限制下利润最大化。旅行商问题(TSP)找到N个城市的最短循环之旅。
+\end{itemize}
+
+为了控制变量,
+评估使用的应用程序maxclique-16和NS-hivert是YewPar的hpx1.8分支自带的应用程序,
+并未对其进行改动,
+其中MaxClique\cite{mccreesh2013multithreading}、
+NS\cite{fromentin2016exploring}的基线实现使用了公开的先进算法.
+这些顺序的C++实现是由领域专家提供的.
+关于应用程序和实例的完整描述在\cite{archibald2018}中.
+
+
+\section{Experimental Setup}
+我们在多达20台机器上对程序运行情况进行了测量,
+每台机器都配备了双8核的Intel Xeon E5-2640v2 2GHz CPU(无超线程),
+64GB RAM,运行Ubuntu 22.04.2 LTS系统。
+每台机器在测试前负载均在1\%之内,
+我们为HPX(版本1.8)和原版的hpx1.8分支的YewPar一样预留了一个核心用于任务管理,
+即在16个核心上我们使用15个工作线程。
+需要注意的是，
+由于修剪导致的非确定性、寻找替代有效解决方案和原版的YewPar的工作窃取方案具有较高的随机性,
+并行搜索的性能分析是非常困难的,
+这可能导致性能异常\ref{sec:performance_anomalies},
+表现为超线性加速/减速.
+为了控制这些因素,
+我们对多种不同的节点数量下多次运行每个实验,
+报告累计统计数据.
+
+\section{空闲环境下加速效果评估}
+
+为了准确评估基于Performance-Driven Workstealing Policy的YewPar与原版在空闲环境下的性能差异,
+我们在各节点均处于空闲状态时,
+对两种应用进行了独立的测试评估。
+在这些测试中，运行的程序可以独占所有计算资源。
+
+
+
+
+
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
