--- a/mproj.bib
+++ b/mproj.bib
@@ -212,3 +212,38 @@
   url    = {https://doi.org/10.5525/gla.researchdata.935},
   note   = {(2019)}
 }
+
+@inproceedings{5541655,
+  author    = {Gaud, Fabien and Genevès, Sylvain and Lachaize, Renaud and Lepers, Baptiste and Mottet, Fabien and Muller, Gilles and Quéma, Vivien},
+  booktitle = {2010 IEEE 30th International Conference on Distributed Computing Systems},
+  title     = {Efficient Workstealing for Multicore Event-Driven Systems},
+  year      = {2010},
+  volume    = {},
+  number    = {},
+  pages     = {516-525},
+  doi       = {10.1109/ICDCS.2010.55}
+}
+
+@article{gmys2016work,
+  title     = {Work stealing with private integer-vector-matrix data structure for multi-core branch-and-bound algorithms},
+  author    = {Gmys, Jan and Leroy, Rudi and Mezmaz, Mohand and Melab, Nouredine and Tuyttens, Daniel},
+  journal   = {Concurrency and Computation: Practice and Experience},
+  volume    = {28},
+  number    = {18},
+  pages     = {4463--4484},
+  year      = {2016},
+  publisher = {Wiley Online Library},
+  doi       = {https://doi.org/10.1002/cpe.3771}
+}
+
+@article{gendron1994parallel,
+  title     = {Parallel Branch-and-Branch Algorithms: Survey and Synthesis},
+  author    = {Gendron, Bernard and Crainic, Teodor Gabriel},
+  journal   = {Operations Research},
+  volume    = {42},
+  number    = {6},
+  pages     = {1042--1066},
+  year      = {1994},
+  publisher = {INFORMS},
+  doi       = {https://doi.org/10.1287/opre.42.6.1042}
+}
